# atomref

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  DEV_PLAN.md  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: atomref.md  elements.md  errors.md  index.md  policy.md  proatoms.md  radii.md  registry.md  transfer.md  xh.md
docs/datasets/: atomic_radius.md  covalent_radius.md  index.md  van_der_waals_radius.md  xh_bond_length.md
docs/dev/: architecture.md  data_curation.md  dev_plan.md  ias_method_selection.md
docs/guide/: custom_sets.md  install.md  non_goals.md  notebooks.md  policies.md  proatomic_density.md  quickstart.md
docs/notebooks/: 01-quickstart.ipynb  01-quickstart.md  02-policies-and-assessment.ipynb  02-policies-and-assessment.md  03-custom-sets-and-discovery.ipynb  03-custom-sets-and-discovery.md  04-ias-method-selection-study.ipynb  05-proatomic-density-and-ias.ipynb
notebooks/: 01-quickstart.ipynb  02-policies-and-assessment.ipynb  03-custom-sets-and-discovery.ipynb  04-ias-method-selection-study.ipynb  05-proatomic-density-and-ias.ipynb
src/atomref/: __init__.py  elements.py  errors.py  policy.py  proatoms.py  radii.py  registry.py  transfer.py  xh.py
src/atomref/data/: __init__.py  covalent.csv  periodic_table.csv  registry.json  van_der_waals.csv  xh_bond_length.csv
tests/: conftest.py  test_smoke.py
tests/elements/: test_elements.py
tests/meta/: test_imports.py  test_notebook_tool.py  test_notebooks.py  test_package_data.py  test_packaging_metadata.py  test_public_api.py  test_readme_sync.py  test_registry_integrity.py  test_release_metadata.py  test_release_tools.py  test_text_generation_tools.py
tests/policy/: test_policy.py
tests/proatoms/: test_dataset.py  test_density.py  test_ias.py  test_ias_reference.py  test_snapshot_builder.py
tests/radii/: test_assessment.py  test_selection.py
tests/registry/: test_registry.py
tests/xh/: test_xh.py
tools/: README.md  build_proatomic_density_snapshot.py  check_dist.py  check_notebooks.py  check_registry.py  export_notebooks.py  gen_readme.py  release_check.py
