[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "atomref"
dynamic = ["version"]
description = "Curated atomic reference data, proatomic densities, and transfer policies for structure algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ivan Yu. Chernyshov", email = "ivan.chernyshoff@gmail.com" }
]
keywords = [
  "chemistry",
  "materials",
  "crystallography",
  "reference data",
  "atomic radii",
  "proatomic density",
  "electron density",
  "interatomic surfaces",
  "IAS",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://delonecommons.github.io/atomref/"
Documentation = "https://delonecommons.github.io/atomref/"
Repository = "https://github.com/DeloneCommons/atomref"
Issues = "https://github.com/DeloneCommons/atomref/issues"
Changelog = "https://github.com/DeloneCommons/atomref/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "tomli>=2; python_version < '3.11'",
]
notebook = [
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "mkdocs>=1.6,<2",
  "mkdocs-jupyter>=0.26,<0.27",
  "nbclient>=0.10,<0.12",
  "nbformat>=5.10,<6",
]
all = [
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "mkdocs>=1.6,<2",
  "mkdocs-jupyter>=0.26,<0.27",
  "nbclient>=0.10,<0.12",
  "nbformat>=5.10,<6",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
]
dev = [
  "build>=1.2",
  "twine>=5",
  "flake8>=7",
]

[tool.hatch.version]
path = "src/atomref/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/atomref"]
include = [
  "src/atomref/data/*.csv",
  "src/atomref/data/*.json",
  "src/atomref/data/*.zip",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/tools",
  "/.flake8",
  "/mkdocs.yml",
  "/README.md",
  "/CHANGELOG.md",
  "/DEV_PLAN.md",
  "/NOTICE.md",
  "/LICENSE",
  "/COPYING",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --ignore=build --ignore=dist"
norecursedirs = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  ".venv",
  ".tox",
  "dist",
  ".eggs",
  "*.egg-info",
]
